--- a/package.json
+++ b/package.json
@@ -6,19 +6,13 @@
   "scripts": {
     "dev": "vite --port 5173",
     "build": "tsc -b && vite build",
+    "deploy": "npm run build && npx wrangler pages deploy dist --project-name machine-center --branch main",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "stable": "bash scripts/serve-stable.sh",
-    "promote": "bash scripts/promote.sh",
-    "rollback": "bash scripts/rollback.sh"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.97.0",
     "@xyflow/react": "^12.10.1",
-    "dexie": "^4.3.0",
-    "dexie-react-hooks": "^4.2.0",
-    "jspreadsheet-ce": "^5.0.4",
-    "jsuites": "^6.2.0",
     "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
